...
        Group {
            // Add or remove model
            if activeFace == nil {
                Button {
                    taskQueue.enqueue(SKVTask(type: .addNode))
                } label: {
                    Text("Add model").frame(maxWidth: .infinity)
                }.buttonStyle(.borderedProminent)
                    
            }
            if activeFace != nil {
                Button {
                    taskQueue.enqueue(SKVTask(type: .removeNode, payload: activeFace))
...
                taskQueue.enqueue((SKVTask(type: .takeScreenshot)))
            } label: {
                Text("Save image").frame(maxWidth: .infinity)
            }.alert("Image saved", isPresented: $imageSaved) {
                Button("OK") {}
            }.alert(imageSaveErrorMessage, isPresented: $imageSaveError) {
                Button("Continue") {}
            }.buttonStyle(.borderedProminent)

        }
    }
    
}
...
