...
        .onAppear {
            if self.observations.count < 1 {
                self.alertNoFacesDetected = true
            }
        }
        .alert(
            "Couldn't detect any faces in your image.",
            isPresented: $alertNoFacesDetected,
            actions: {
                Button("Continue") {}
                Button("Pick another photo") { dismiss() }
            },
            message: {Text("However, you can always place a model manually by tapping on the **+** symbol (in the top right corner).")}
...
